--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,17 +12,13 @@
 <body>
 
 <div class="wrapper">
-    <div class="sidebar" data-color="red" data-image="light/img/sidebar-5.jpg">
+    <div class="sidebar" data-color="blue">
         <div class="sidebar-wrapper">
             <div class="logo"><a href="/" class="simple-text">PDV1 |̣ DB1</a></div>
             <ul class="nav">
-                <li class="active">
-                    <a href="dashboard.html">
-                        <i class="pe-7s-graph"></i>
-                        <p>{{ block('title') }}</p>
-                    </a>
-                </li>
-
+                <li class="active"><a href=""><i class="pe-7s-cart"></i><p>Fazer Pedido</p></a></li>
+                <li><a href=""><i class="pe-7s-shopbag"></i><p>Produtos</p></a></li>
+                <li><a href=""><i class="pe-7s-users"></i><p>Clientes</p></a></li>
             </ul>
         </div>
     </div>
@@ -46,12 +42,7 @@
 
     </div>
 </div>
-
-
 </body>
 
-    <script src="js/jquery.3.2.1.min.js" type="text/javascript"></script>
-    <script src="js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="js/bootstrap-notify.js"></script>
-    <script src="js/light-bootstrap-dashboard.js?v=1.4.0"></script>
+<script src="js/jquery.3.2.1.min.js" type="text/javascript"></script>  <script src="js/bootstrap.min.js" type="text/javascript"></script> <script src="js/bootstrap-notify.js"></script> <script src="js/light-bootstrap-dashboard.js?v=1.4.0"></script>
 </html>
