--- a/templates/pedido/list.html.twig
+++ b/templates/pedido/list.html.twig
@@ -4,7 +4,7 @@
 
 <div class="row">
     <div class="col-md-9">
-        <form action="{{path('pedido_index')}}" method="POST">
+        <form action="{{path('pedido_search')}}" method="POST">
             <div class="input-group">
                 <input type="text" name="term" class="form-control" placeholder="Procurar por...">
                 <span class="input-group-btn">
